# CustomerProject

./: settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/color/: selector_bottom_item.xml
app/src/main/res/layout/: activity_main.xml  activity_navigation.xml  tab_item.xml
app/src/main/res/menu/: menu_navigation_with_view_pager.xml
app/src/main/res/values/: strings.xml
commenlib/: CMakeLists.txt  build.gradle
commenlib/src/androidTest/java/com/chenli/commenlib/: ExampleInstrumentedTest.java
commenlib/src/main/: AndroidManifest.xml
commenlib/src/main/cpp/: native-lib.cpp  opencv-lib.cpp  test-lib.cpp
commenlib/src/main/java/com/chenli/commenlib/Media/: AudioCapturer.java  MediaExtrAndMuxer.java
commenlib/src/main/java/com/chenli/commenlib/bean/: TabEntity.java
commenlib/src/main/java/com/chenli/commenlib/jni/: JNICall.java  Native.java  OpencvNative.java  Person.java
commenlib/src/main/java/com/chenli/commenlib/mvp/model/: IBaseModel.java  IBaseRequestCallBack.java
commenlib/src/main/java/com/chenli/commenlib/mvp/view/: IView.java
commenlib/src/main/java/com/chenli/commenlib/rxbus/: RxBus.java
commenlib/src/main/java/com/chenli/commenlib/util/constant/: MemoryConstants.java  RegexConstants.java  TimeConstants.java
commenlib/src/main/java/com/chenli/commenlib/util/gameutil/: GameUtil.java  MatrixHelper.java  ShaderUtils.java  TextureHepler.java
commenlib/src/main/java/com/chenli/commenlib/util/mainutil/: ActivityUtils.java  AppUtils.java  BarUtils.java  CacheUtils.java  CleanUtils.java  CloseUtils.java  ConvertUtils.java  CrashHandler.java  CrashUtils.java  DeviceUtils.java  EmptyUtils.java  EncodeUtils.java  EncryptUtils.java  FileIOUtils.java  FileUtils.java  FragmentUtils.java  ImageUtils.java  IntentUtils.java  KeyboardUtils.java  LogUtils.java  NetworkUtils.java  PermissionUtils.java  PhoneUtils.java  ProcessUtils.java  RegexUtils.java  SDCardUtils.java  SPUtils.java  ScreenUtils.java  ServiceUtils.java  ShellUtils.java  SizeUtils.java  SnackbarUtils.java  SpanUtils.java  StringUtils.java  TimeUtils.java  ToastUtils.java  Utils.java  WifiSearcher.java  ZipUtils.java  read.txt
commenlib/src/main/java/com/chenli/commenlib/util/subutil/: CameraUtils.java  ClipboardUtils.java  LocationUtils.java  LunarUtils.java  PinyinUtils.java  ReflectUtils.java  ThreadPoolUtils.java  Utils.java  VibrationUtils.java  read.txt
commenlib/src/main/res/layout/: activity_navigation.xml
commenlib/src/main/res/values/: strings.xml
commenlib/src/test/java/com/chenli/commenlib/: ExampleUnitTest.java
gameproject/: build.gradle
gameproject/src/main/: AndroidManifest.xml
gameproject/src/main/assets/: fragment3.glsl  fragmentshader.glsl  shader3.glsl
gameproject/src/main/res/layout/: activity_main.xml
gameproject/src/main/res/raw/: fragmentshader.glsl  fragmentshader1.glsl  particle_fragment_shader.glsl  particle_vertex_shader.glsl  point_vertex_shader.glsl  simple_fragment_shader.glsl  simple_vertex_shader.glsl  texture_fragment_shader.glsl  texture_vertex_shader.glsl  vertexshader.glsl  vertexshader1.glsl
gradle/wrapper/: gradle-wrapper.properties
libgiflib/: CMakeLists.txt  build.gradle
libgiflib/src/androidTest/java/com/chenli/libgiflib/: ExampleInstrumentedTest.java
libgiflib/src/main/: AndroidManifest.xml
libgiflib/src/main/java/com/chenli/commenlib/gif/: GifLib.java
libgiflib/src/main/jni/: libgif.cpp
libgiflib/src/main/res/values/: strings.xml
libgiflib/src/test/java/com/chenli/libgiflib/: ExampleUnitTest.java
mediamodel/: build.gradle
mediamodel/src/main/: AndroidManifest.xml
mediamodel/src/main/res/layout/: activity_main.xml
mediamodel/src/main/res/values/: strings.xml
ounews/: build.gradle
ounews/src/main/: AndroidManifest.xml
ounews/src/main/res/layout/: activity_main.xml
ounews/src/main/res/menu/: menu_navigation.xml  menu_news.xml
ounews/src/main/res/values/: colors.xml  strings.xml
testdemo/: build.gradle
testdemo/src/main/: AndroidManifest.xml
testdemo/src/main/res/anim/: rotate.xml  scale.xml
testdemo/src/main/res/drawable/: shape_edittext.xml
testdemo/src/main/res/layout/: activity_camera_layout.xml  activity_main.xml  activity_media_layout.xml
testdemo/src/main/res/raw/: fragmentshader.glsl
yuvlib/: CMakeLists.txt  build.gradle
yuvlib/libs/: Android.mk  CMakeLists.txt
yuvlib/src/androidTest/java/com/chenli/yuvlib/: ExampleInstrumentedTest.java
yuvlib/src/main/: AndroidManifest.xml
yuvlib/src/main/cpp/: libyuv.cpp  yuvlib.cpp  yuvlib.h
yuvlib/src/main/java/com/chenli/yuvlib/: YUVlib.java
yuvlib/src/main/res/values/: strings.xml
yuvlib/src/test/java/com/chenli/yuvlib/: ExampleUnitTest.java
(+148 files in other folders)
